--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.7.5",
+    "@nuxt/image": "1.9.0",
     "@nuxthub/core": "^0.8.11",
     "nuxt": "^3.15.1",
     "nuxt-svgo": "4.0.11",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.7.5",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.18.0",
     "typescript": "^5.7.3",
     "vue-tsc": "^2.2.0",
