--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.7.5",
-    "@nuxt/image": "1.9.0",
+    "@nuxt/image": "^1.9.0",
     "@nuxthub/core": "^0.8.11",
     "nuxt": "^3.15.1",
     "nuxt-svgo": "4.0.11",
