--- a/package.json
+++ b/package.json
@@ -3,18 +3,16 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
     "dev": "nuxt dev",
+    "build": "nuxt build",
     "generate": "nuxt generate",
-    "preview": "npx nuxthub preview",
-    "deploy": "npx nuxthub deploy",
+    "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint ."
   },
   "dependencies": {
     "@nuxt/eslint": "^0.7.5",
     "@nuxt/image": "1.9.0",
-    "@nuxthub/core": "^0.8.11",
     "nuxt": "^3.15.1",
     "nuxt-svgo": "4.0.11",
     "vue": "^3.5.13",
