--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@nuxt/eslint": "^0.7.5",
     "@nuxt/image": "1.9.0",
     "nuxt": "^3.15.1",
     "nuxt-svgo": "4.0.11",
@@ -19,9 +18,11 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@nuxt/eslint": "^0.7.5",
     "@nuxt/eslint-config": "^0.7.5",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.18.0",
+    "sass-embedded": "^1.83.4",
     "typescript": "^5.7.3",
     "vue-tsc": "^2.2.0",
     "wrangler": "^3.101.0"
