--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/image": "1.9.0",
     "nuxt": "^3.15.1",
     "nuxt-svgo": "4.0.11",
+    "nuxt-viewport": "2.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
